// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaflet maps renders a map with HERE maps as provider 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50%; height: 75px;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://2.base.maps.cit.api.here.com/maptile/2.1/maptile/newest/normal.day/10/524/338/256/png8"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with MapBox maps as provider 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50%; height: 75px;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/9/262/169"
                  style="width: 512px; height: 512px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with attribution 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50%; height: 75px;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://b.tile.osm.org/10/524/338.png"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          >
            <div
              class="leaflet-control-attribution leaflet-control"
            >
              <a
                href="https://leafletjs.com"
                target="_blank"
                title="A JavaScript library for interactive maps"
              >
                <svg
                  aria-hidden="true"
                  class="leaflet-attribution-flag"
                  height="8"
                  viewBox="0 0 12 8"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h12v4H0z"
                    fill="#4C7BE1"
                  />
                  <path
                    d="M0 4h12v3H0z"
                    fill="#FFD500"
                  />
                  <path
                    d="M0 7h12v1H0z"
                    fill="#E0BC00"
                  />
                </svg>
                Leaflet
              </a>
               
              <span
                aria-hidden="true"
              >
                |
              </span>
               © 
              <a
                href="https://osm.org/copyright"
              >
                OpenStreetMap
              </a>
               contributors
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with current location 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50%; height: 75px;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://b.tile.osm.org/10/524/338.png"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <div
              class="leaflet-marker-icon custom-leaflet-map-icon-marker leaflet-zoom-animated"
              role="button"
              style="margin-left: -6px; margin-top: -6px; width: 12px; height: 12px; transform: translate3d(0px,0px,0); z-index: 0;"
              tabindex="0"
            >
              <img
                alt="map marker"
                class="custom-leaflet-map-icon-marker-icon"
                src="image:url"
              />
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with markers 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50%; height: 75px;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://b.tile.osm.org/10/524/338.png"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          >
            <div
              class="leaflet-marker-icon custom-leaflet-map-icon-marker leaflet-zoom-animated leaflet-interactive"
              role="button"
              style="margin-left: -6px; margin-top: -6px; width: 12px; height: 12px; transform: translate3d(0px,0px,0); z-index: 0;"
              tabindex="0"
              title="Mendix HQ"
            >
              <img
                alt="map marker"
                class="custom-leaflet-map-icon-marker-icon"
                src="image:url"
              />
            </div>
            <div
              class="leaflet-marker-icon custom-leaflet-map-icon-marker leaflet-zoom-animated leaflet-interactive"
              role="button"
              style="margin-left: -6px; margin-top: -6px; width: 12px; height: 12px; transform: translate3d(-6px,-19px,0); z-index: -19;"
              tabindex="0"
              title="Gementee Rotterdam"
            >
              <img
                alt="map marker"
                class="custom-leaflet-map-icon-marker-icon"
                src="image:url"
              />
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with percentage of parent units renders the structure correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50%; height: 75%;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://b.tile.osm.org/10/524/338.png"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with percentage of width and height units renders the structure correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50%; height: auto; padding-bottom: 37.5%;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://b.tile.osm.org/10/524/338.png"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with pixels renders structure correctly 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50px; height: 75px;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://b.tile.osm.org/10/524/338.png"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Leaflet maps renders a map with right structure 1`] = `
<DocumentFragment>
  <div
    class="widget-maps"
    style="width: 50px; height: 37.5px;"
  >
    <div
      class="widget-leaflet-maps-wrapper"
    >
      <div
        class="widget-leaflet-maps leaflet-container leaflet-touch leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom"
        style="position: relative;"
        tabindex="0"
      >
        <div
          class="leaflet-pane leaflet-map-pane"
          style="transform: translate3d(0px,0px,0);"
        >
          <div
            class="leaflet-pane leaflet-tile-pane"
          >
            <div
              class="leaflet-layer "
              style="z-index: 1;"
            >
              <div
                class="leaflet-tile-container leaflet-zoom-animated"
                style="z-index: 18; transform: translate3d(0px,0px,0) scale(1);"
              >
                <img
                  alt=""
                  class="leaflet-tile"
                  src="https://b.tile.osm.org/10/524/338.png"
                  style="width: 256px; height: 256px; transform: translate3d(-196px,-172px,0);"
                />
              </div>
            </div>
          </div>
          <div
            class="leaflet-pane leaflet-overlay-pane"
          />
          <div
            class="leaflet-pane leaflet-shadow-pane"
          />
          <div
            class="leaflet-pane leaflet-marker-pane"
          />
          <div
            class="leaflet-pane leaflet-tooltip-pane"
          />
          <div
            class="leaflet-pane leaflet-popup-pane"
          />
          <div
            class="leaflet-proxy leaflet-zoom-animated"
            style="transform: translate3d(134340.33129244443px,86700.37048118314px,0) scale(512);"
          />
        </div>
        <div
          class="leaflet-control-container"
        >
          <div
            class="leaflet-top leaflet-left"
          >
            <div
              class="leaflet-control-zoom leaflet-bar leaflet-control"
            >
              <a
                aria-disabled="false"
                aria-label="Zoom in"
                class="leaflet-control-zoom-in"
                href="#"
                role="button"
                title="Zoom in"
              >
                <span
                  aria-hidden="true"
                >
                  +
                </span>
              </a>
              <a
                aria-disabled="false"
                aria-label="Zoom out"
                class="leaflet-control-zoom-out"
                href="#"
                role="button"
                title="Zoom out"
              >
                <span
                  aria-hidden="true"
                >
                  −
                </span>
              </a>
            </div>
          </div>
          <div
            class="leaflet-top leaflet-right"
          />
          <div
            class="leaflet-bottom leaflet-left"
          />
          <div
            class="leaflet-bottom leaflet-right"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
